@@ -1,7 +1,8 @@
 2003-07-10 Tom Copeland  <tom@infoether.com>
 
-	* www/stats/site_stats_utils.php, projects.php:
-	Working on bug #399; project stats page works better now.
+	* www/stats/site_stats_utils.php, projects.php, graphs.php:
+	Bug #399; project stats page works better now, removed duplicate
+	graph from site graphs page.
 	
 2003-07-02 Christian Bayle	<bayle@debian.org>
 
